docs/content/docs/v5/foundations/hooks.mdx
---
title: Hooks & Webhooks
description: Pause workflows and resume them later with external data, user interactions, or HTTP requests.
type: conceptual
summary: Pause workflows and resume them with external data or HTTP requests.
languageSwitcher:
  - ts
  - py
prerequisites:
  - /docs/foundations/workflows-and-steps
related:
  - /docs/api-reference/workflow/create-hook
  - /docs/api-reference/workflow/create-webhook
  - /docs/ai/human-in-the-loop
---

Hooks pause workflow execution and resume it later with external data. Workflows can wait for external events, user interactions (also known as "human in the loop"), or HTTP requests.

## Understanding hooks

At their core, **Hooks** are a low-level primitive that allows you to pause a workflow and resume it later with arbitrary [serializable data](/docs/foundations/serialization). Think of them as suspension points in your workflow where you're waiting for external input.

A hook has a unique token that external systems use to send data back to your workflow. This makes hooks useful for scenarios like:

- Waiting for approval from a user or admin
- Receiving data from an external system or service
- Implementing event-driven workflows that react to multiple events over time

### Creating your first hook

This workflow creates a hook and waits for external data:

<LanguageContent value="ts">

```typescript lineNumbers
import { createHook } from "workflow";

export async function approvalWorkflow() {
  "use workflow";

  using hook = createHook<{ approved: boolean; comment: string }>();

  console.log("Waiting for approval...");
  console.log("Send approval to token:", hook.token);

  // Workflow pauses here until data is sent
  const result = await hook;

  if (result.approved) {
    console.log("Approved with comment:", result.comment);
  } else {
    console.log("Rejected:", result.comment);
  }
}
```

</LanguageContent>
<LanguageContent value="py">

```python lineNumbers
import pydantic

from app.workflow import wf
from vercel import workflow

class Approval(pydantic.BaseModel, workflow.BaseHook):
    approved: bool
    comment: str

@wf.workflow
async def approval_workflow(request_id: str) -> None:
    token = f"approval:{request_id}"

    async with Approval.wait(token=token) as hook:
        print("Waiting for approval at token:", token)

        # Workflow pauses here until data is sent
        result = await hook

    if result.approved:
        print("Approved with comment:", result.comment)
    else:
        print("Rejected:", result.comment)
```

</LanguageContent>

The workflow will pause at `await hook` until external code sends data to resume it.

<Callout type="info">
<LanguageContent value="ts" as="span">We recommend using the `using` keyword, which implements [TC39 Explicit Resource Management](https://github.com/tc39/proposal-explicit-resource-management), for automatic cleanup.</LanguageContent><LanguageContent value="py" as="span">Use `async with` to dispose the hook automatically when the block exits.</LanguageContent>
</Callout>

<Callout type="info">
<LanguageContent value="ts" as="span">See the full API reference for [`createHook()`](/docs/api-reference/workflow/create-hook) for all available options.</LanguageContent><LanguageContent value="py" as="span">Python hook payloads must be Pydantic models or dataclasses that inherit [`BaseHook`](/docs/api-reference/python/base-hook).</LanguageContent>
</Callout>

### Resuming a hook

To send data to a waiting workflow, resume its hook from an API route or other external context:

<LanguageContent value="ts">

```typescript lineNumbers
import { resumeHook } from "workflow/api";

// In an API route or external handler
export async function POST(request: Request) {
  const { token, approved, comment } = await request.json();

  try {
    // Resume the workflow with the approval data
    const result = await resumeHook(token, { approved, comment });
    return Response.json({ success: true, runId: result.runId });
  } catch (error) {
    return Response.json({ error: "Invalid token" }, { status: 404 });
  }
}
```

</LanguageContent>
<LanguageContent value="py">

```python lineNumbers
from app.workflows.approval import Approval
from vercel import workflow

@app.post("/api/approval")
async def approve(request_id: str, approved: bool, comment: str):
    token = f"approval:{request_id}"
    payload = Approval(approved=approved, comment=comment)

    try:
        result = await payload.resume(token)  # [!code highlight]
        return {"success": True, "run_id": result.run_id}
    except workflow.HookNotFoundError:
        return {"success": False, "error": "Invalid token"}
```

</LanguageContent>

The key points:
- <LanguageContent value="ts" as="span">Hooks allow you to pass **any [serializable data](/docs/foundations/serialization)** as the payload</LanguageContent><LanguageContent value="py" as="span">Hook fields can contain [serializable data](/docs/foundations/serialization), and Pydantic or dataclass construction validates the payload</LanguageContent>
- You need the hook's `token` to resume it
- The workflow will resume execution right where it left off

### Checking for token conflicts

Sometimes you need to know that a hook token has been claimed, but you do not want to wait for external data yet. Check the hook for a conflict before waiting for data:

<LanguageContent value="ts">

```typescript lineNumbers
import { createHook } from "workflow";

declare function processOrder(orderId: string): Promise<void>; // @setup

export async function orderWorkflow(orderId: string) {
  "use workflow";

  using hook = createHook({
    token: `order:${orderId}`
  });

  const conflict = await hook.getConflict(); // [!code highlight]
  if (conflict) { // [!code highlight]
    // Another active run already owns this token.
    return { dedupedTo: conflict.runId };
  }

  // The hook token is registered and reserved here.
  await processOrder(orderId);
}
```

Calling `createHook()` on its own does not register the hook; registration is only committed when the workflow suspends. Awaiting `hook.getConflict()` suspends the workflow to commit the hook registration, then resolves with `null` once the hook is registered and ready to receive payloads, or with a `Run` handle for the run that owns the token (see [`HookConflictError`](/docs/errors/hook-conflict)). For `hook_conflict` events persisted by older worlds that did not record the owning run's ID, `getConflict()` rejects with `HookConflictError` instead of resolving with an incomplete handle. The conflicting run's accessors are durable steps, so the workflow can inspect `await conflict.status`, wait on `await conflict.returnValue`, or cancel the owner with `await conflict.cancel()`. See [Run idempotency](/docs/foundations/idempotency#run-idempotency) for these strategies.

</LanguageContent>
<LanguageContent value="py">

```python lineNumbers
import pydantic

from app.workflow import wf
from vercel import workflow

class OrderEvent(pydantic.BaseModel, workflow.BaseHook):
    confirmed: bool

@wf.workflow
async def order_workflow(order_id: str):
    async with OrderEvent.wait(token=f"order:{order_id}") as hook:
        conflict = await hook.get_conflict()  # [!code highlight]
        if conflict is not None:  # [!code highlight]
            # Another active run already owns this token.
            return {"deduped_to": conflict.run_id}

        # The hook token is registered and reserved here.
        await process_order(order_id)
```

Calling `wait()` only constructs the hook event. Awaiting `hook.get_conflict()` suspends the workflow to register the token, then returns `None` when this run owns it or a `Run` handle for the existing owner. Python `Run` operations perform World I/O and cannot run in the workflow sandbox; pass `conflict.run_id` to a step if you need to inspect the owner's status or result. See [Run idempotency](/docs/foundations/idempotency#run-idempotency) for these strategies.

</LanguageContent>

### Custom tokens for deterministic hooks

<LanguageContent value="ts">

By default, hooks generate their own token. However, you often want to use a **custom token** that external systems can reconstruct. This is especially useful for long-running workflows where the same workflow instance should handle multiple events.

</LanguageContent>
<LanguageContent value="py">

Pass a **custom token** to `BaseHook.wait()` when an external system needs to resume the hook. Derive it from data that system can reconstruct, especially for long-running workflows that handle multiple events.

</LanguageContent>

For example, imagine a Slack bot where each channel should have its own workflow instance:

<LanguageContent value="ts">

```typescript lineNumbers
import { createHook } from "workflow";

export async function slackChannelBot(channelId: string) {
  "use workflow";

  // Use channel ID in the token so Slack webhooks can find this workflow
  using hook = createHook<SlackMessage>({
    token: `slack_messages:${channelId}`
  });

  for await (const message of hook) {
    console.log(`${message.user}: ${message.text}`);

    if (message.text === "/stop") {
      break;
    }

    await processMessage(message);
  }
}

async function processMessage(message: SlackMessage) {
  "use step";
  // Process the Slack message
}
```

</LanguageContent>
<LanguageContent value="py">

```python lineNumbers
import pydantic

from app.workflow import wf
from vercel import workflow

class SlackMessage(pydantic.BaseModel, workflow.BaseHook):
    user: str
    text: str

@wf.workflow
async def slack_channel_bot(channel_id: str):
    token = f"slack_messages:{channel_id}"

    async with SlackMessage.wait(token=token) as hook:
        async for message in hook:
            print(f"{message.user}: {message.text}")

            if message.text == "/stop":
                break

            await process_message(message)

@wf.step
async def process_message(message: SlackMessage):
    # Process the Slack message
    pass
```

</LanguageContent>

Now your Slack webhook handler can deterministically resume the correct workflow:

<LanguageContent value="ts">

```typescript lineNumbers
import { resumeHook } from "workflow/api";

export async function POST(request: Request) {
  const slackEvent = await request.json();
  const channelId = slackEvent.channel;

  try {
    // Reconstruct the token using the channel ID
    await resumeHook(`slack_messages:${channelId}`, slackEvent);

    return new Response("OK");
  } catch (error) {
    return new Response("Hook not found", { status: 404 });
  }
}
```

</LanguageContent>
<LanguageContent value="py">

```python lineNumbers
from app.workflows.slack import SlackMessage
from vercel.workflow import HookNotFoundError

@app.post("/api/slack")
async def receive_slack_event(event: SlackMessage, channel_id: str):
    try:
        await event.resume(f"slack_messages:{channel_id}")
        return {"ok": True}
    except HookNotFoundError:
        return {"ok": False, "error": "Hook not found"}
```

</LanguageContent>

### Receiving multiple events

Hooks are reusable and can receive multiple events over time:

<LanguageContent value="ts">

```typescript lineNumbers
import { createHook } from "workflow";

export async function dataCollectionWorkflow() {
  "use workflow";

  using hook = createHook<{ value: number; done?: boolean }>();

  const values: number[] = [];

  // Keep receiving data until we get a "done" signal
  for await (const payload of hook) {
    values.push(payload.value);

    if (payload.done) {
      break;
    }
  }

  console.log("Collected values:", values);
  return values;
}
```

</LanguageContent>
<LanguageContent value="py">

```python lineNumbers
import pydantic

from app.workflow import wf
from vercel import workflow

class DataPoint(pydantic.BaseModel, workflow.BaseHook):
    value: int
    done: bool = False

@wf.workflow
async def data_collection_workflow(collection_id: str):
    values: list[int] = []

    async with DataPoint.wait(token=f"collection:{collection_id}") as hook:
        async for payload in hook:
            values.append(payload.value)

            if payload.done:
                break

    print("Collected values:", values)
    return values
```

</LanguageContent>

Each time external code resumes the same token, the loop receives another value.

### Disposing hooks early

When a workflow ends, hooks are automatically disposed. However, you may want to release a hook token early so another workflow can use it while your workflow continues running. Limit the hook's resource-management scope to control when disposal happens:

<LanguageContent value="ts">

```typescript lineNumbers
import { createHook } from "workflow";

export async function handoffWorkflow(channelId: string) {
  "use workflow";

  {
    using hook = createHook<{ message: string; handoff?: boolean }>({
      token: `channel:${channelId}`
    });

    for await (const payload of hook) {
      console.log("Received:", payload.message);

      if (payload.handoff) {
        break;
      }
    }
  } // Hook token released here

  // Token is now available for another workflow
  console.log("Continuing with other work...");
}
```

You can also manually dispose using the `dispose()` method:

{/* @skip-typecheck: incomplete code sample */}
```typescript lineNumbers
const hook = createHook<{ message: string }>({ token: `channel:${channelId}` });
const payload = await hook;
hook.dispose(); // Manually release the token
```

</LanguageContent>
<LanguageContent value="py">

```python lineNumbers
import pydantic

from app.workflow import wf
from vercel import workflow

class ChannelMessage(pydantic.BaseModel, workflow.BaseHook):
    message: str
    handoff: bool = False

@wf.workflow
async def handoff_workflow(channel_id: str):
    async with ChannelMessage.wait(token=f"channel:{channel_id}") as hook:
        async for payload in hook:
            print("Received:", payload.message)

            if payload.handoff:
                break
    # Hook token released here

    print("Continuing with other work...")
```

You can also call `hook.dispose()` directly when you need to release the token before the surrounding block exits.

</LanguageContent>

<Callout type="info">
After disposal, the hook will no longer receive events and the async iterator will stop yielding values.
</Callout>

## Understanding webhooks

<LanguageContent value="ts">

Hooks require you to manually handle HTTP requests and route them to workflows. **Webhooks** provide a higher-level abstraction built on top of hooks that:

1. Automatically serializes the entire HTTP [`Request`](https://developer.mozilla.org/en-US/docs/Web/API/Request) object
2. Provides an automatically addressable `url` property pointing to the generated webhook endpoint
3. Handles sending HTTP [`Response`](https://developer.mozilla.org/en-US/docs/Web/API/Response) objects back to the caller

When using Workflow SDK, webhooks are automatically wired up at `/.well-known/workflow/v1/webhook/:token` without any additional setup.

<Callout type="warn">
`createWebhook()` exposes a public route at `/.well-known/workflow/v1/webhook/:token`, and the token in that URL is the only authorization performed for incoming requests. This is convenient for prototypes because you can share the webhook URL (endpoint) without creating another route, but if you need stronger security, prefer [`createHook()`](/docs/api-reference/workflow/create-hook) behind your own route and authorize the request before calling [`resumeHook()`](/docs/api-reference/workflow-api/resume-hook) to avoid unauthenticated workflow resumptions.
</Callout>

<Callout type="info">
See the full API reference for [`createWebhook()`](/docs/api-reference/workflow/create-webhook) for all available options.
</Callout>

### Creating your first webhook

Here's a webhook that receives HTTP requests. Like hooks, webhooks support the `using` keyword for automatic cleanup:

```typescript lineNumbers
import { createWebhook } from "workflow";

export async function webhookWorkflow() {
  "use workflow";

  using webhook = createWebhook();

  // The webhook is automatically available at this URL
  console.log("Send HTTP requests to:", webhook.url);
  // Example: https://your-app.com/.well-known/workflow/v1/webhook/lJHkuMdQ2FxSFTbUMU84k

  // Workflow pauses until an HTTP request is received
  const request = await webhook;

  console.log("Received request:", request.method, request.url);

  const data = await request.json();
  console.log("Data:", data);
}
```

The webhook will automatically respond with a `202 Accepted` status by default. External systems can make an HTTP request to the `webhook.url` to resume your workflow.

### Sending custom responses

Webhooks provide two ways to send custom HTTP responses: **static responses** and **dynamic responses**.

#### Static responses

Use the `respondWith` option to provide a static response that will be sent automatically for every request:

```typescript lineNumbers
import { createWebhook } from "workflow";

export async function webhookWithStaticResponse() {
  "use workflow";

  using webhook = createWebhook({
    respondWith: Response.json({
      success: true, message: "Webhook received"
    }),
  });

  const request = await webhook;

  // The response was already sent automatically
  const data = await request.json();
  await processData(data);
}

async function processData(data: any) {
  "use step";
  // Long-running processing here
}
```

#### Dynamic responses (manual mode)

For dynamic responses based on the request content, set `respondWith: "manual"` and call the `respondWith()` method on the request:

```typescript lineNumbers
import { createWebhook, type RequestWithResponse } from "workflow";

async function sendCustomResponse(request: RequestWithResponse, message: string) {
  "use step";

  // Call respondWith() to send the response
  await request.respondWith(
    new Response(
      JSON.stringify({ message }),
      {
        status: 200,
        headers: { "Content-Type": "application/json" }
      }
    )
  );
}

export async function webhookWithDynamicResponse() {
  "use workflow";

  // Set respondWith to "manual" to handle responses yourself
  using webhook = createWebhook({ respondWith: "manual" });

  const request = await webhook;
  const data = await request.json();

  // Decide what response to send based on the data
  if (data.type === "urgent") {
    await sendCustomResponse(request, "Processing urgently");
  } else {
    await sendCustomResponse(request, "Processing normally");
  }

  // Continue workflow...
}
```

<Callout type="warning">
When using `respondWith: "manual"`, the `respondWith()` method **must** be called from within a step function due to serialization requirements. This requirement may be removed in the future.
</Callout>

### Handling multiple webhook requests

Like hooks, webhooks support iteration:

```typescript lineNumbers
import { createWebhook, type RequestWithResponse } from "workflow";

async function sendAck(request: RequestWithResponse, message: string) {
  "use step";

  await request.respondWith(
    Response.json({ received: true, message })
  );
}

async function processEvent(data: any) {
  "use step";
  console.log("Processing event:", data);
}

export async function eventCollectorWorkflow() {
  "use workflow";

  using webhook = createWebhook({ respondWith: "manual" });
  console.log("Send events to:", webhook.url);

  for await (const request of webhook) {
    const data = await request.json();

    if (data.type === "done") {
      await sendAck(request, "Workflow complete");
      break;
    }

    await sendAck(request, "Event received");
    await processEvent(data);
  }
}
```

## Hooks vs. webhooks: when to use each

| Feature | Hooks | Webhooks |
|---------|-------|----------|
| **Data Format** | Arbitrary serializable data | HTTP `Request` objects |
| **URL** | No automatic URL | Automatic `webhook.url` property |
| **Response Handling** | N/A | Can send HTTP `Response` (static or dynamic) |
| **Use Case** | Custom integrations, type-safe payloads | HTTP webhooks, standard REST APIs |
| **Resuming** | [`resumeHook()`](/docs/api-reference/workflow-api/resume-hook) | Automatic via HTTP, or [`resumeWebhook()`](/docs/api-reference/workflow-api/resume-webhook) |

**Use hooks when:**
- You need full control over the payload structure
- You're integrating with custom event sources
- You want strong TypeScript typing with [`defineHook()`](/docs/api-reference/workflow/define-hook)

**Use webhooks when:**
- You're receiving HTTP requests from external services
- You need to send HTTP responses back to the caller
- You want automatic URL routing without writing API handlers

</LanguageContent>
<LanguageContent value="py">

The Python SDK does not currently provide the `createWebhook()` convenience API or an automatically generated public webhook URL. Use a typed hook behind an HTTP route in your application instead:

```python lineNumbers
from app.workflows.events import ExternalEvent
from vercel.workflow import HookNotFoundError

@app.post("/api/events/{event_id}")
async def receive_event(event_id: str, event: ExternalEvent):
    # Authenticate and validate the HTTP request in this route first.
    try:
        hook = await event.resume(f"event:{event_id}")
        return {"accepted": True, "run_id": hook.run_id}
    except HookNotFoundError:
        return {"accepted": False, "error": "Hook not found"}
```

This keeps HTTP authentication and response handling in your web framework while the typed hook provides durable workflow resumption.

</LanguageContent>

## Advanced patterns

### Type-safe hooks

<LanguageContent value="ts">

The [`defineHook()`](/docs/api-reference/workflow/define-hook) helper provides type safety and runtime validation between creating and resuming hooks using [Standard Schema v1](https://standardschema.dev). Use any compliant validator like Zod or Valibot:

```typescript lineNumbers
import { defineHook } from "workflow";
import { z } from "zod";

// Define the hook with schema for type safety and runtime validation
const approvalHook = defineHook({ // [!code highlight]
  schema: z.object({ // [!code highlight]
    requestId: z.string(), // [!code highlight]
    approved: z.boolean(), // [!code highlight]
    approvedBy: z.string(), // [!code highlight]
    comment: z.string().transform((value) => value.trim()), // [!code highlight]
  }), // [!code highlight]
}); // [!code highlight]

// In your workflow
export async function documentApprovalWorkflow(documentId: string) {
  "use workflow";

  using hook = approvalHook.create({
    token: `approval:${documentId}`
  });

  // Payload is type-safe and validated
  const approval = await hook;

  console.log(`Document ${approval.requestId} ${approval.approved ? "approved" : "rejected"}`);
  console.log(`By: ${approval.approvedBy}, Comment: ${approval.comment}`);
}

// In your API route - both type-safe and runtime-validated!
export async function POST(request: Request) {
  const { documentId, ...approvalData } = await request.json();

  try {
    // The schema validates the payload before resuming the workflow
    await approvalHook.resume(`approval:${documentId}`, approvalData);
    return new Response("OK");
  } catch (error) {
    return Response.json({ error: "Invalid token or validation failed" }, { status: 400 });
  }
}
```

This pattern is especially valuable in larger applications where the workflow and API code are in separate files, providing both compile-time type safety and runtime validation.

</LanguageContent>
<LanguageContent value="py">

Pydantic hook models provide type validation when data is created for resumption and again when the workflow receives it:

```python lineNumbers
import pydantic

from app.workflow import wf
from vercel import workflow

class Approval(pydantic.BaseModel, workflow.BaseHook):
    request_id: str
    approved: bool
    approved_by: str
    comment: str

    @pydantic.field_validator("comment")
    @classmethod
    def trim_comment(cls, value: str) -> str:
        return value.strip()

@wf.workflow
async def document_approval_workflow(document_id: str):
    async with Approval.wait(token=f"approval:{document_id}") as hook:
        approval = await hook
    print(
        f"Document {approval.request_id} "
        f"{'approved' if approval.approved else 'rejected'}"
    )

@app.post("/api/documents/{document_id}/approval")
async def approve_document(document_id: str, approval: Approval):
    await approval.resume(f"approval:{document_id}")
    return {"ok": True}
```

</LanguageContent>

## Best practices

### Token design

<LanguageContent value="ts">

Custom tokens are available for `createHook()` with server-side `resumeHook()` only. Webhooks (`createWebhook()`) always generate their own unique tokens. A generated token is not trivial to guess, but it is not a strong security contract either, so anyone who obtains the URL can invoke an unintended webhook resumption. To prevent unauthenticated run resumptions entirely, prefer a **hook** over the **webhook** convenience and implement your own authentication on the route that calls `resumeHook()`.

</LanguageContent>
<LanguageContent value="py">

Pass custom tokens to `BaseHook.wait()` and resume them with a Pydantic model or dataclass instance. Authenticate the request in your HTTP route before calling `resume()`.

</LanguageContent>

When using custom tokens:

- **Make them deterministic**: Base them on data the external system can reconstruct, such as channel IDs or user IDs.
- **Use namespacing**: Prefix tokens to avoid conflicts, such as `slack:<channel-id>` or `github:<repo-id>`.
- **Include routing information**: Ensure the token contains enough information to identify the correct workflow instance.

### HTTP response handling

<LanguageContent value="ts">

- Use **static responses** (`respondWith: Response`) for acknowledgments
- Use **manual mode** (`respondWith: "manual"`) when responses depend on request processing
- Remember that `respondWith()` must be called from within a step function

</LanguageContent>
<LanguageContent value="py">

The application route that resumes a Python hook owns the HTTP response. Return an acknowledgment after `resume()` succeeds, and map `HookNotFoundError` or validation failures to the response status your integration expects.

</LanguageContent>

### Iterating over events

<LanguageContent value="ts" as="span">Both hooks and webhooks</LanguageContent><LanguageContent value="py" as="span">Hooks</LanguageContent> support iteration, making them useful for long-running event loops:

<LanguageContent value="ts">

{/* @skip-typecheck: incomplete code sample */}
```typescript
using hook = createHook<Event>();

for await (const event of hook) {
  await processEvent(event);

  if (shouldStop(event)) {
    break;
  }
}
```

</LanguageContent>
<LanguageContent value="py">

```python
async with Event.wait(token=token) as hook:
    async for event in hook:
        await process_event(event)

        if should_stop(event):
            break
```

</LanguageContent>

This pattern allows a single workflow instance to handle multiple events over time, maintaining state between events.

## Related documentation

<LanguageContent value="ts">

- [Serialization](/docs/foundations/serialization) - Understanding what data can be passed through hooks
- [`createHook()` API Reference](/docs/api-reference/workflow/create-hook)
- [`createWebhook()` API Reference](/docs/api-reference/workflow/create-webhook)
- [`defineHook()` API Reference](/docs/api-reference/workflow/define-hook)
- [`resumeHook()` API Reference](/docs/api-reference/workflow-api/resume-hook)
- [`resumeWebhook()` API Reference](/docs/api-reference/workflow-api/resume-webhook)

</LanguageContent>
<LanguageContent value="py">

- [Serialization](/docs/foundations/serialization) - Understand what data can be passed through hooks
- [`BaseHook` API reference](/docs/api-reference/python/base-hook) - Wait for, inspect, resume, and dispose typed hooks
- [Python getting started](/docs/getting-started/python) - Set up the Python SDK and its workflow registry
- [Idempotency](/docs/foundations/idempotency) - Coordinate active workflow runs with deterministic tokens

</LanguageContent>
